--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,18 @@
 body{
   font-family: "Montserrat";
-  background-color: #F3F1F5;
+  background-image: url('https://images.unsplash.com/photo-1518976024611-28bf4b48222e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=332&q=80')
 }
 .main{
   font-size: 10rem;
   font-family: 'Klee One', cursive;
-  margin-left: 20rem;
+  margin-left: 6rem;
+  color: #012443;
 }
 input {
-    margin-left: 20rem;
+    margin-left: 4rem;
     height: 4rem;
     width: 40rem;
+
 }
 .add{
   width: 9rem;
@@ -31,16 +33,15 @@ input {
   margin-top: 5rem;
 }
 #pending{
-  margin-left: 20rem;
+  margin-left: 18rem;
   margin-top: 5rem;
-  position: relative;
-  top: 3.3rem;
   border-radius: 0px;
-  width: 30rem;
-  margin-right: 0rem;
+  width: 50rem;
+  font-size: 2rem;
+  margin-bottom: 3rem;
 }
 .listing{
-  margin-left: 25rem;
+  margin-left: 2rem;
   margin-top: 5rem;
   font-family: 'Alumni Sans', sans-serif;
   font-weight: bold;
@@ -59,18 +60,23 @@ input {
 ul li {
   cursor: pointer;
   position: relative;
-  right:5rem;
-  width: 48rem;
+  width: 49rem;
   padding: 12px 8px 12px 10px;
   background: #eee;
-  font-family: 'Alumni Sans', sans-serif;
-  font-weight: bold;
+  font-family: 'Pacifico', cursive;
   font-size: 3rem;
   transition: 0.2s;
 }
 #clr{
-  left: 60rem;
+   position: relative;
+   width: 50rem;
+   margin-left: 4rem;
+   margin-bottom: 5rem;
 }
-.foot{
+.whole{
+  width: 60rem;
+  background-color: #FFDFAF;
+  margin-left: 13rem;
+  margin-top: 16rem;
   margin-bottom: 10rem;
 }
