--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ ul li {
   width: 60rem;
   background-color: #FFDFAF;
   margin-left: 13rem;
-  border-radius=10px;
   margin-top: 5rem;
   margin-bottom: 10rem;
+  border-radius: 20px;
 }
